Changes:   1) Letris canvas design